--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       rel="stylesheet"
     />
 
-    <title>BendWell</title>
+    <title>bendwell</title>
   </head>
   <body>
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
